adapted notebook to work with user input

--- a/notebook_runwise.ipynb
+++ b/notebook_runwise.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Optimal running route\n",
     "\n",
-    "This is a notebook for determining optimal running route with a fuzzy mcda"
+    "This notebook aims to help runners find the best route by using a fuzzy multi-criteria decision analysis (MCDA) approach. Unlike standard methods, fuzzy MCDA can handle uncertainty, making it ideal for decisions where factors like terrain, safety, and weather conditions are not always precise. Here, we’ll gather data on different routes and rank them based on specific factors like scenic value, safety, elevation, and surface type. By adjusting weights based on personal preferences, this notebook will provide a customized route recommendation, helping runners pick the best path for their needs."
    ]
   },
   {
@@ -15,34 +15,99 @@
    "id": "908a4958-0168-441f-9aee-5a4e960d5dfb",
    "metadata": {},
    "source": [
-    "# Fuzzy Multi Decision Control System"
+    "# Fuzzy Multi Criteria Decision Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a320bd28-101d-4032-8593-0decce2df1e6",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of routes to evaluate:  2\n",
+      "Enter the name for Route 1:  wald\n",
+      "Enter the name for Route 2:  stadt\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How many criteria would you like to consider for the optimal route?  2\n",
-      "Enter the name of the criterion (e.g., Scenic Value, Safety, etc.):  safety\n",
-      "How many linguistic terms would you like for safety?  3\n",
-      "Enter the name of the linguistic term for safety (e.g., Low, High, etc.):  high\n",
-      "Enter the lower limit for high (e.g., 0 for Low):  0\n",
-      "Enter the modal value for high (e.g., 0.5 for Medium):  0.5\n",
-      "Enter the upper limit for high (e.g., 1 for High):  1\n",
-      "Enter the name of the linguistic term for safety (e.g., Low, High, etc.):  safe\n",
-      "Enter the lower limit for safe (e.g., 0 for Low):  0\n",
-      "Enter the modal value for safe (e.g., 0.5 for Medium):  0.5\n",
-      "Enter the upper limit for safe (e.g., 1 for High):  1\n",
-      "Enter the name of the linguistic term for safety (e.g., Low, High, etc.):  sda\n",
-      "Enter the lower limit for sda (e.g., 0 for Low):  0\n",
-      "Enter the modal value for sda (e.g., 0.5 for Medium):  .5\n",
-      "Enter the upper limit for sda (e.g., 1 for High):  1\n"
+      "Available criteria:\n",
+      "1. Scenic Value\n",
+      "2. Safety\n",
+      "3. Traffic Conditions\n",
+      "4. Terrain Difficulty\n",
+      "5. Distance\n",
+      "6. Weather Conditions\n",
+      "7. Route Maintenance\n",
+      "8. Accessibility\n",
+      "9. Environmental Impact\n",
+      "10. Cost\n",
+      "11. Cultural Value\n",
+      "12. Noise Level\n",
+      "13. Shade Availability\n",
+      "14. Resting Spots\n",
+      "15. Crowdedness\n",
+      "16. Wildlife\n",
+      "17. Road Condition\n",
+      "18. Signage\n",
+      "19. Emergency Access\n",
+      "20. Scenic Diversity\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select criteria to consider by entering the numbers separated by commas (e.g., 1,3,5):  1,2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Enter the values for wald:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select Scenic Value (Low, Medium, High):  high\n",
+      "Select Safety (Poor, Average, Excellent):  average\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Enter the values for stadt:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select Scenic Value (Low, Medium, High):  high\n",
+      "Select Safety (Poor, Average, Excellent):  excellent\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fuzzy Decision Matrix:\n",
+      "                         wald        stadt\n",
+      "Scenic Value      (0.5, 1, 1)  (0.5, 1, 1)\n",
+      "Safety        (0.3, 0.5, 0.7)  (0.6, 1, 1)\n"
      ]
     }
    ],
@@ -154,17 +219,29 @@
     "    }\n",
     "}\n",
     "\n",
-    "# List of criteria for user input\n",
-    "criteria = list(fuzzy_numbers.keys())\n",
-    "routes = [\"Route A\", \"Route B\", \"Route C\"]\n",
+    "# Collect number of routes and names from the user\n",
+    "num_routes = int(input(\"Enter the number of routes to evaluate: \"))\n",
+    "routes = [input(f\"Enter the name for Route {i+1}: \").strip() for i in range(num_routes)]\n",
     "\n",
-    "# Define the fuzzy decision matrix and gather user input\n",
+    "# List all criteria for user selection\n",
+    "all_criteria = list(fuzzy_numbers.keys())\n",
+    "\n",
+    "# Allow the user to choose criteria to consider\n",
+    "print(\"Available criteria:\")\n",
+    "for i, criterion in enumerate(all_criteria, 1):\n",
+    "    print(f\"{i}. {criterion}\")\n",
+    "\n",
+    "chosen_indices = input(\"Select criteria to consider by entering the numbers separated by commas (e.g., 1,3,5): \")\n",
+    "chosen_indices = [int(x.strip()) - 1 for x in chosen_indices.split(\",\")]\n",
+    "selected_criteria = [all_criteria[i] for i in chosen_indices]\n",
+    "\n",
+    "# Define the fuzzy decision matrix and gather user input for selected criteria\n",
     "fuzzy_decision_matrix = {}\n",
     "\n",
     "for route in routes:\n",
     "    fuzzy_decision_matrix[route] = {}\n",
     "    print(f\"\\nEnter the values for {route}:\")\n",
-    "    for criterion in criteria:\n",
+    "    for criterion in selected_criteria:\n",
     "        options = \", \".join(fuzzy_numbers[criterion].keys())\n",
     "        term = input(f\"Select {criterion} ({options}): \").strip().capitalize()\n",
     "        # Validate the input to match available options\n",
@@ -176,12 +253,12 @@
     "# Convert the fuzzy decision matrix to a DataFrame for easier visualization\n",
     "df = pd.DataFrame(fuzzy_decision_matrix)\n",
     "print(\"\\nFuzzy Decision Matrix:\")\n",
-    "print(df)\n"
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "316a5977-65e6-4822-b8b9-844c61fb9ad4",
    "metadata": {},
    "outputs": [
@@ -189,10 +266,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             Route A  Route B  Route C\n",
-      "Lower Limit    0.535    0.255     0.05\n",
-      "Modal Value    0.950    0.450     0.10\n",
-      "Upper Limit    0.975    0.695     0.49\n"
+      "Please enter the weight for each selected criterion. The weights should sum up to 1.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the weight for Scenic Value:  0.8\n",
+      "Enter the weight for Safety:  0.2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Aggregated Fuzzy Scores:\n",
+      "             wald  stadt\n",
+      "Lower Limit  0.46   0.52\n",
+      "Modal Value  0.90   1.00\n",
+      "Upper Limit  0.94   1.00\n"
      ]
     }
    ],
@@ -200,9 +294,9 @@
     "# Initialize an empty dictionary for weights\n",
     "weights = {}\n",
     "\n",
-    "# Collect weights from the user\n",
-    "print(\"Please enter the weight for each criterion. The weights should sum up to 1.\")\n",
-    "for criterion in criteria:\n",
+    "# Collect weights from the user for only the selected criteria\n",
+    "print(\"Please enter the weight for each selected criterion. The weights should sum up to 1.\")\n",
+    "for criterion in selected_criteria:\n",
     "    while True:\n",
     "        try:\n",
     "            weight = float(input(f\"Enter the weight for {criterion}: \"))\n",
@@ -220,11 +314,9 @@
     "# Calculate the weighted fuzzy scores\n",
     "fuzzy_scores = {}\n",
     "\n",
-    "for route, criteria_values in routes.items():\n",
+    "for route, criteria_values in fuzzy_decision_matrix.items():\n",
     "    fuzzy_scores[route] = []\n",
-    "    for criterion, term in criteria_values.items():\n",
-    "        # Get the triangular fuzzy number for the term\n",
-    "        fuzzy_number = fuzzy_numbers[criterion][term]\n",
+    "    for criterion, fuzzy_number in criteria_values.items():\n",
     "        # Get the weight for the criterion\n",
     "        weight = weights[criterion]\n",
     "        # Calculate the weighted fuzzy number\n",
@@ -242,12 +334,12 @@
     "# Convert the aggregated scores to a DataFrame for easier visualization\n",
     "df = pd.DataFrame(aggregated_scores, index=[\"Lower Limit\", \"Modal Value\", \"Upper Limit\"])\n",
     "print(\"\\nAggregated Fuzzy Scores:\")\n",
-    "print(df)"
+    "print(df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3feb4c14-4741-4a34-988e-03b489b81c96",
    "metadata": {},
    "outputs": [
@@ -255,10 +347,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Route  Crisp Value\n",
-      "0  Route A     0.820000\n",
-      "1  Route B     0.466667\n",
-      "2  Route C     0.213333\n"
+      "   Route  Crisp Value\n",
+      "0  stadt     0.840000\n",
+      "1   wald     0.766667\n"
      ]
     }
    ],
